nav bar creation #header

--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>e-pandemic</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="scss/style.css" />
+     
 </head>
-<body> 
-</body>
+<body>  
+<div class="main-container">
+    <!-- BEGIN header-->
+    <header class="">
+        <!-- BEGIN navigation bar -->
+        <nav>   
+
+        </nav>
+        <!-- END navigation bar-->
+    </header>
+    <!-- END header -->
+</div>
+</body> 
 </html>
