responsive design for #header

--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
             <!-- BEGIN Logo -->
             <div class="logo">
                 <h1><a href="#">e-pandemic</a></h1>
-                <p>Statistique Global</p>
+                <p>Statistique Globale <br>José Harisson IGGLIA5 n°12</p>
             </div>
             <!-- ENDLogo -->
     
             <!-- BEGIN navigation bar -->
             <nav>  
-                <ul class="nav">
-                    <li><a href="#home" class="active"><img src="images/home.png"></img>Accueil</a></li>
-                    <li><a href="#about"><img src="images/about.png"></img> A propos</a></li>
-                    <li><a href="#portfolio"><img src="images/portfolio.png"></img> Portfolio</a></li>
-                    <li><a href="#services"><img src="images/service.png"></img> Services</a></li>
-                    <li><a href="#contact"><img src="images/contact.png"></img> Contact</a></li>
+                <ul class="nav_list">
+                    <li class="item"><a href="#" class="active">Accueil</a></li>
+                    <li class="item"><a href="#">Nouvelles</a></li>
+                    <li class="item"><a href="#">Préventions</a></li>
+                    <li class="item"><a href="#">Questions</a></li>
                 </ul>
             </nav>
             <!-- END navigation bar-->
@@ -39,6 +38,9 @@
 
     <!-- BEGIN Main page -->
     <div class="main">
+
+        BEGINNING OF THE END ....
+        <br><br><br>
             hzijpijgotoôrththg
             fghfdglh
             dfgh
