responsive SUCCESSFULLY DONE #header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- BEGIN Logo -->
             <div class="logo">
                 <h1><a href="#">e-pandemic</a></h1>
-                <p>Statistique Globale <br>José Harisson IGGLIA5 n°12</p>
+                <p>Evolution Globale <br>José Harisson IGGLIA5 n°12 </p>
             </div>
             <!-- ENDLogo -->
     
