i've done the information section in #main-section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- BEGIN navigation bar -->
             <nav>  
                 <ul class="nav_list">
-                    <li class="item"><a href="#" class="active">Accueil</a></li>
+                    <li class="item"><a href="#info" class="active">Accueil</a></li>
                     <li class="item"><a href="#">Nouvelles</a></li>
                     <li class="item"><a href="#">Préventions</a></li>
                     <li class="item"><a href="#">Questions</a></li>
@@ -39,7 +39,7 @@
     <!-- BEGIN Main page -->
     <div class="sections">
         <!-- BEGIN Info section -->
-        <section class="info">
+        <section id="info">
             <div class="container">
                 <div class="card">
                     <div class="card-img">
@@ -48,12 +48,12 @@
                     <div class="card-text">
                         <h1> Faire face au <span>Covid-19</span> !</h1>
                         <p>Le monde fait face actuellement au pandémie du <b>Covid-19</b>
-                        . Il est important de s'assurer que tous les services de santés 
+                        . <br>Il est important de s'assurer que tous les services de santés 
                         et les opérations de traitements de la pandémie continuent afin de protéger tous les citoyens.</p>
                         <br>
                         <p><span>e-pandemic</span>, qui est un interface de diffusion des informations
                              à propos du <b>Covid-19</b>, facilite la compréhension
-                            des dispositifs et précautions à prendre face à cette pandémie; et fournit les dernières nouvelles 
+                            des dispositifs et précautions à prendre face à cette pandémie;<br> et fournit les dernières nouvelles 
                             la concernant. Plus d'informations peuvent être trouver sur le site officiel du gouvernement.
                         </p>
                     </div>
