--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="item"><a href="#info" class="active">Accueil</a></li>
                     <li class="item"><a href="#">Nouvelles</a></li>
                     <li class="item"><a href="#prevent">Préventions</a></li>
-                    <li class="item"><a href="#">Questions</a></li>
+                    <li class="item"><a href="#question">Questions</a></li>
                 </ul>
             </nav>
             <!-- END navigation bar-->
@@ -106,6 +106,51 @@
                 </div>
         </section>
         <!-- END Prevent section 2 -->
+
+        
+        <!-- BEGIN Question section 1-->
+        <section id="question">
+                <div class="container">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/search.png" alt="question">
+                        </div>
+                        <div class="card-text">
+                            <h1> Les questions les plus demandées sur le <span>Covid-19 :</span> </h1> 
+                            <div class="question-container">
+                                <div class="q-container one">
+                                    <ul>
+                                        <li class="item">Quel est le risque de contamination au coronavirus ?</li>
+                                        <li class="item">Vais-je mourir si j'attrape la maladie ?</li>
+                                        <li class="item">Qui sont les plus touchés ?</li>
+                                        <li class="item">L'ail tue-t-il le virus ?</li>
+                                        <li class="item">Est-ce-qu'une température chaude tue le virus ?</li>
+                                        <li class="item">Combien de temps le virus peut-il survivre ?</li>
+                                        <li class="item">Prendre une douche chaude tue-t-il le virus ?</li>
+                                        <li class="item">Les insects peuvent-ils porter le virus ?</li> 
+                                    </ul>
+                                </div>
+                                <div class="q-container two">
+                                    <ul>
+                                        <li class="item">Le Covid-19 peut-il être transmis par la nourriture ?</li>
+                                        <li class="item">Manger du poulet peut-il causer le virus ?</li>
+                                        <li class="item">Quel type de masque protège-t-il du virus ?</li>
+                                        <li class="item">Les chiens et chats peuvent-ils porter le Covid-19 ?</li>
+                                        <li class="item">Les machines sèches mains peuvent-elles tuer le virus ?</li>
+                                        <li class="item">Les personnes infectées peuvent se rétablir ?</li>
+                                        <li class="item">Les rayons UV peuvent-ils tuer la nouvelle fomre du Covid-19 ?</li>
+                                        <li class="item">Le vaccin de pneumonie peut-il guerir du Covid-19 ?</li> 
+                                    </ul>    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- END Question section 1-->
+    
+
+
     </div>
     <!-- END Main page -->
 
