trying hardly to make this js working but ... nope #question

--- a/index.html
+++ b/index.html
@@ -120,26 +120,47 @@
                             <div class="question-container">
                                 <div class="q-container one">
                                     <ul>
-                                        <li class="item">Quel est le risque de contamination au coronavirus ?</li>
-                                        <li class="item">Vais-je mourir si j'attrape la maladie ?</li>
-                                        <li class="item">Qui sont les plus touchés ?</li>
-                                        <li class="item">L'ail tue-t-il le virus ?</li>
-                                        <li class="item">Est-ce-qu'une température chaude tue le virus ?</li>
-                                        <li class="item">Combien de temps le virus peut-il survivre ?</li>
-                                        <li class="item">Prendre une douche chaude tue-t-il le virus ?</li>
-                                        <li class="item">Les insects peuvent-ils porter le virus ?</li> 
+                                        <li class="q-item">Quel est le risque de contamination au coronavirus ?
+                                            <div id="collapse-one" class="container q-container collapse">Très élevé...cependant le
+                                                 virus peut être facilement traiter</div>
+                                        </li>
+                                        <li class="q-item">Vais-je mourir si j'attrape la maladie ?
+                                                <div id="collapse-one" class="container q-container collapse">Près de 80% des gens qui ont eu les symptômes 
+                                                    se sont rétablis au bout de deux semaines
+                                                </div></li>
+                                        <li class="q-item">Qui sont les plus touchés ?
+                                                <div id="collapse-two" class="container q-container collapse">Les personnes agées sont deux fois plus touchées que les jeunes</div></li>
+                                        <li class="q-item">L'ail tue-t-il le virus ?
+                                                <div id="collapse-three" class="container q-container collapse">Non</div></li>
+                                        <li class="q-item">Est-ce-qu'une température chaude tue le virus ?
+                                                <div id="collapse-four" class="container q-container collapse">Non</div></li>
+                                        <li class="q-item">Combien de temps le virus peut-il survivre ?
+                                                <div id="collapse-five" class="container q-container collapse">Il peut survivre entre 8h-10h sur les surfaces planes</div></li>
+                                        <li class="q-item">Prendre une douche chaude tue-t-il le virus ?
+                                                <div id="collapse-six" class="container q-container collapse">Non, votre température corporelle restera le même</div></li>
+                                        <li class="q-item">Les insects peuvent-ils porter le virus ?
+                                                <div id="collapse-seven" class="container q-container collapse">Non</div></li> 
                                     </ul>
                                 </div>
                                 <div class="q-container two">
                                     <ul>
-                                        <li class="item">Le Covid-19 peut-il être transmis par la nourriture ?</li>
-                                        <li class="item">Manger du poulet peut-il causer le virus ?</li>
-                                        <li class="item">Quel type de masque protège-t-il du virus ?</li>
-                                        <li class="item">Les chiens et chats peuvent-ils porter le Covid-19 ?</li>
-                                        <li class="item">Les machines sèches mains peuvent-elles tuer le virus ?</li>
-                                        <li class="item">Les personnes infectées peuvent se rétablir ?</li>
-                                        <li class="item">Les rayons UV peuvent-ils tuer la nouvelle fomre du Covid-19 ?</li>
-                                        <li class="item">Le vaccin de pneumonie peut-il guerir du Covid-19 ?</li> 
+                                        <li class="q-item">Le Covid-19 peut-il être transmis par la nourriture ?
+                                                <div id="collapse-eight" class="container q-container collapse">Non</div>
+                                        </li>
+                                        <li class="q-item">Manger du poulet peut-il causer le virus ?
+                                                <div id="collapse-nine" class="container q-container collapse">Non</div></li>
+                                        <li class="q-item">Quel type de masque protège-t-il du virus ?
+                                                <div id="collapse-ten" class="container q-container collapse">Un masque à trois couches peut stopper completement la propagation de la maladie</div></li>
+                                        <li class="q-item">Les chiens et chats peuvent-ils porter le Covid-19 ?
+                                                <div id="collapse-eleven" class="container q-container collapse">Oui</div></li>
+                                        <li class="q-item">Les machines sèches mains peuvent-elles tuer le virus ?
+                                                <div id="collapse-twelve" class="container q-container collapse">Non</div></li>
+                                        <li class="q-item">Les personnes infectées peuvent se rétablir ?
+                                                <div id="collapse-thirteen" class="container q-container collapse">Oui, 80% des personnes contaminées ont retrouvé leurs santés sans soins ni traitements particuliers</div></li>
+                                        <li class="q-item">Les rayons UV peuvent-ils tuer la nouvelle fomre du Covid-19 ?
+                                                <div id="collapse-fourteen" class="container q-container collapse">Non, Les rayons UV causent seulement l'irritation de la peau... Attention !</div></li>
+                                        <li class="q-item">Le vaccin de pneumonie peut-il guerir du Covid-19 ?
+                                                <div id="collapse-fifteen" class="container q-container collapse">Non</div></li> 
                                     </ul>    
                                 </div>
                             </div>
@@ -156,4 +177,5 @@
 
 </div>
 </body> 
+<script src="js/script.js"></script>
 </html>
