--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                                 <div id="collapse-twelve" class="container q-answer collapse">Non</div></li>
                                         <li class="q-item">Les personnes infectées peuvent se rétablir ?
                                                 <div id="collapse-thirteen" class="container q-answer collapse">Oui, 80% des personnes contaminées ont retrouvé leurs santés sans soins ni traitements particuliers</div></li>
-                                        <li class="q-item">Les rayons UV peuvent-ils tuer la nouvelle fomre du Covid-19 ?
+                                        <li class="q-item">Les rayons UV peuvent-ils tuer la nouvelle forme du Covid-19 ?
                                                 <div id="collapse-fourteen" class="container q-answer collapse">Non, Les rayons UV causent seulement l'irritation de la peau... Attention !</div></li>
                                         <li class="q-item">Le vaccin de pneumonie peut-il guerir du Covid-19 ?
                                                 <div id="collapse-fifteen" class="container q-answer collapse">Non</div></li> 
