FOOTER with responsive 100% SUCCESS #footer-design

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- BEGIN Logo -->
             <div class="logo">
                 <h1><a href="#">e-pandemic</a></h1>
-                <p>Evolution du Covid-19<br>José Harisson IGGLIA5 n°12 </p>
+                <p>Evolution du Covid-19<br><b><u>José Harisson IGGLIA5 n°12</u></b> </p>
             </div>
             <!-- ENDLogo -->
     
@@ -174,6 +174,30 @@
 
     </div>
     <!-- END Main page -->
+
+        <!-- BEGIN Footer -->
+        <footer id="footer">
+                <div class="container">
+                    <div class="card">
+                        <div class="card-stay"> <h1>Restez chez vous !</h1> 
+                        </div> 
+                        <div class="card-source"> 
+                            <div class="container">
+                                    <img src="images/who.png" alt="">
+                                    <img src="images/cdc.png" alt="">
+                                    <img src="images/google.png" alt="">
+                                    <img src="images/mygov.png" alt="">
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <h1>Développé par_  <span>    &copy; BowMan1421</span></h1>
+                        </div>
+                </div>
+            </div>
+        </footer>
+        <!-- END Footer -->
+           
+
 
 </div>
 </body> 
