do some basic interface for data news #news

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav>  
                 <ul class="nav_list">
                     <li class="item"><a href="#info" class="active">Accueil</a></li>
-                    <li class="item"><a href="#">Nouvelles</a></li>
+                    <li class="item"><a href="#news">Nouvelles</a></li>
                     <li class="item"><a href="#prevent">Préventions</a></li>
                     <li class="item"><a href="#question">Questions</a></li>
                 </ul>
@@ -61,6 +61,47 @@
             </div>
         </section>
         <!-- END Info section -->
+
+
+        <!-- BEGIN NEWS section -->
+        <section id="news">
+            <div class="container">
+                <div class="card"> 
+                    <div class="card-text">
+                        <h1> Données <b class="blue">internationales </b>des cas du <span>Covid-19</span></h1> 
+                    </div> 
+                    <div class="card-table-title"> 
+                        <ul class="container-item">
+                            <li class="item"><b>Country</b></li>
+                            <li class="item"><b>Cases</b></li>
+                            <li class="item"><b>Death</b></li>
+                            <li class="item"><b>Recovered</b></li>
+                        </ul>
+                        <ul class="container-item data">
+                            <li id="country" class="item">World</li>
+                            <li id="cases" class="item">29764055</li>
+                            <li id="death" class="item">939473</li>
+                            <li id="recovered" class="item">20225219</li>
+                        </ul>
+                        <ul class="container-item data">
+                            <li id="country" class="item">United States</li>
+                            <li id="cases" class="item">6724179</li>
+                            <li id="death" class="item">199746</li>
+                            <li id="recovered" class="item">3646102</li>
+                        </ul>
+                        <ul class="container-item data">
+                            <li id="country" class="item">India</li>
+                            <li id="cases" class="item">5118253</li>
+                            <li id="death" class="item">83198</li>
+                            <li id="recovered" class="item">4025079</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- END NEWS section -->
+
+
 
         <!-- BEGIN Prevent section 1 -->
         <section id="prevent">
@@ -190,7 +231,7 @@
                             </div>
                         </div>
                         <div class="card-text">
-                            <h1>Développé par_  <span>    &copy; BowMan1421</span></h1>
+                            <h1>Développé par_<span>&copy; BowMan1421</span></h1>
                         </div>
                 </div>
             </div>
