i've done the fetching data from JSON in #news

--- a/index.html
+++ b/index.html
@@ -76,25 +76,10 @@
                             <li class="item"><b>Cases</b></li>
                             <li class="item"><b>Death</b></li>
                             <li class="item"><b>Recovered</b></li>
-                        </ul>
-                        <ul class="container-item data">
-                            <li id="country" class="item">World</li>
-                            <li id="cases" class="item">29764055</li>
-                            <li id="death" class="item">939473</li>
-                            <li id="recovered" class="item">20225219</li>
-                        </ul>
-                        <ul class="container-item data">
-                            <li id="country" class="item">United States</li>
-                            <li id="cases" class="item">6724179</li>
-                            <li id="death" class="item">199746</li>
-                            <li id="recovered" class="item">3646102</li>
-                        </ul>
-                        <ul class="container-item data">
-                            <li id="country" class="item">India</li>
-                            <li id="cases" class="item">5118253</li>
-                            <li id="death" class="item">83198</li>
-                            <li id="recovered" class="item">4025079</li>
-                        </ul>
+                        </ul> 
+                    </div>
+                    <div id ="myData"class="card-table-title">
+                           
                     </div>
                 </div>
             </div>
@@ -242,5 +227,6 @@
 
 </div>
 </body> 
+<script type ="text/javascript" src="data.json"></script>
 <script src="js/script.js"></script>
 </html>
