I've done the JSON html desing #news

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="container">
                 <div class="card"> 
                     <div class="card-text">
-                        <h1> Données <b class="blue">internationales </b>des cas du <span>Covid-19</span></h1> 
+                        <h1> Données <b class="blue">internationales </b>du <span>Covid-19</span></h1> 
                     </div> 
                     <div class="card-table-title"> 
                         <ul class="container-item">
@@ -94,17 +94,7 @@
                     <div class="card">
                         <div class="card-text">
                             <h1>Les moyens de prévention contre le <span>Coronavirus ?</span></h1>
-                        </div>
-                        <div class="card-img">
-                            <svg viewBox="0 0 100 100">
-                            <title>Protection</title>
-                            <g id="Protection">
-                                <path d="M12,10.87V27.8A30.5,30.5,0,0,0,32,56.67,30.5,30.5,0,0,0,52,27.8V10.87A83.5,83.5,0,0,1,32,7.3,83.5,83.5,0,0,1,12,10.87ZM33,17v2.07a10,10,0,0,1,5.33,2.19c1.24-1.24.86-.71.86-1.45a2,2,0,1,1,1.49,1.93l-.94.94A9.91,9.91,0,0,1,42,28H44a1,1,0,0,1,0,2H42a9.94,9.94,0,0,1-2.21,5.33l.94.94a2,2,0,1,1-1.41,1.41l-.94-.94A9.93,9.93,0,0,1,33,39V41a1,1,0,0,1-2,0V39a9.93,9.93,0,0,1-5.33-2.2l-.94.94a2,2,0,1,1-1.41-1.41l.93-.94A9.9,9.9,0,0,1,22.05,30H20a1,1,0,0,1,0-2h2.06a9.81,9.81,0,0,1,2.21-5.33l-.94-.94a2,2,0,1,1,1.49-1.93c0,.76-.38.21.86,1.45A10,10,0,0,1,31,19.07V17A1,1,0,0,1,33,17Z"></path>
-                                <path class="corona" d="M27.1,22.69l.66.66a1,1,0,0,1-1.42,1.41l-.65-.65a7.92,7.92,0,0,0,0,9.79l.65-.65a1,1,0,0,1,1.42,1.41l-.66.66a8,8,0,0,0,9.8,0l-.66-.66a1,1,0,0,1,1.42-1.41l.66.66a8,8,0,0,0,0-9.81c-.59.59-.84,1-1.37,1a1,1,0,0,1-.71-1.71l.66-.66A8,8,0,0,0,27.1,22.69Zm2.78,7a2,2,0,1,1,0-2.82A2,2,0,0,1,29.88,29.71Zm3.89-3.89A1.5,1.5,0,0,1,35.89,28,1.5,1.5,0,0,1,33.77,25.82ZM32.71,34a1,1,0,0,1-1.42-1.42A1,1,0,0,1,32.71,34Z"></path>
-                                <path d="M32,1A78.28,78.28,0,0,1,6,5V27.8A36.84,36.84,0,0,0,32,63,36.84,36.84,0,0,0,58,27.8V5A78.42,78.42,0,0,1,32,1ZM54,27.8A32.47,32.47,0,0,1,32.34,58.67a1,1,0,0,1-.68,0A32.47,32.47,0,0,1,10,27.8V9.92a1,1,0,0,1,1-1C24.6,8.32,31.24,5,32.3,5.3A82.19,82.19,0,0,0,53,8.92a1,1,0,0,1,1,1Z"></path>
-                            </g>
-                            </svg>
-                        </div>
+                        </div> 
                         
                     </div>
                 </div>
